# axion-

./: CMakeLists.txt  Makefile  README.md  data.json
docs/: API_reference.md  hardware_setup.md
inc/: servo_types.h
src/: pwm_driver.c  servo_hal.c  servo_hal.h  timer_config.c  timer_config.h
stm32-servo-hal/: README.md
stm32-servo-hal/config/: board_config.h  servo_config.h
stm32-servo-hal/drivers/: stm32_hal_wrapper.c  stm32_hal_wrapper.h
stm32-servo-hal/examples/: basic_servo_control.c  multi_servo_example.c  servo_sweep.c
stm32-servo-hal/src/: pwm_driver.h
tests/: test_pwm_driver.c  test_servo_hal.c
